<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UStates</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_feedback">Feedback</string>
    <string name="search_hint">State Search..</string>
    <string name="search_state">State Search Widget</string>
    <string name="state">UStates</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="empty_list">No State Found</string>

    <!-- Data for individual "State" Page-->
    <string name="state_name">State: </string>
    <string name="abbreviation">Abbreviation: </string>
    <string name="nickname">Nickname: </string>
    <string name="demonym">Demonym: </string>
    <string name="capital">Capital: </string>
    <string name="largest_city">Largest City: </string>
    <string name="area">Area: </string>
    <string name="area_rank">Rank: </string>
    <string name="population">Population: </string>
    <string name="population_rank">Rank: </string>
    <string name="year">Statehood: </string>
    <string name="timezone">Time Zone: </string>
    <string name="website">Website: </string>
    <string name="tourism">Tourism: </string>
    <string name="map">Google Maps™</string>

    <!--Data for "About" page-->
    <string name="title_activity_about">UStates</string>
    <string name="about_app_name">App: </string>
    <string name="about_app_name_info">UStates</string>
    <string name="about_version">Version: </string>
    <string name="about_version_info">1.0</string>
    <string name="about_size">Size: </string>
    <string name="about_size_info">3.48 MB</string>
    <string name="about_support">Requires Android: </string>
    <string name="about_support_info">4.0 and up</string>
    <string name="about_develop">Developed by: </string>
    <string name="about_develop_info">Prudhvi</string>
    <string name="about_thanks">Special thanks to my friends Ramana, Ajay and Rakesh.</string>
    <string name="about_copyright">Copyright © 2014</string>

    <!--Data for "Help" page-->
    <string name="title_activity_help">UStates</string>
    <string name="help_app_features">App Features</string>
    <string name="help_feature1">&#8226;Users can learn about 50 states in the USA all at one place.</string>
    <string name="help_feature2">&#8226;Information about each state includes state flag, capital city,
        largest city, demonym, state websites, location on the map and other statistics.</string>
    <string name="help_feature3">&#8226;Most of the information is updated. Any changes would be
        reflected in the future versions of the app.</string>
    <string name="help_feature4">&#8226;Easy navigation to web pages and Google Maps™ if the user wants to
        learn more.</string>
    <string name="help_feature5">&#8226;User friendly interface with search functionality and swipe views.</string>
    <string name="help_home_page">Home Page</string>
    <string name="help_feature6">&#8226;Home page of the app has scrollable list of 50 states along with a menu
    bar at the top.</string>
    <string name="help_feature7">&#8226;The menu bar has options to search, help and about the app.</string>
    <string name="help_feature8">&#8226;Search option helps to easily pick the states instead of scrolling.</string>
    <string name="help_feature9">&#8226;The overflow icon next to search option has more info about the app.</string>
    <string name="help_feature10">&#8226;Selecting a state from the home page opens the state page.</string>
    <string name="help_state_page">State Page</string>
    <string name="help_feature11">&#8226;State Page has data specific to state selected.</string>
    <string name="help_feature12">&#8226;Users can swipe left/right to view other states without going back.</string>
    <string name="help_feature13">&#8226;Users can learn more by clicking the underlined data in each state page.</string>
    <string name="help_feature14">&#8226;Locate each state by clicking Google Maps™. Your device should have
        the Google Maps app installed.</string>
    <string name="help_feature15">&#8226;Navigate back to home page using your device\'s back button or the
    back button on the menu bar.</string>
    <string name="help_misc">Miscellaneous</string>
    <string name="help_feature16">&#8226;This app\'s design is optimal for phones though it works on tablets.</string>
    <string name="help_feature17">&#8226;This app is tested for bugs, crashes and consistency of data.</string>
    <string name="help_feature18">&#8226;Restart the app if it crashes and please do report the bugs to us.</string>
    <string name="help_feature19">&#8226;Consider reviewing the app, your feedback is important to us.</string>
    <string name="help_disclaimer">Disclaimer: All the information in the app is gathered from Wikipedia™ and
    other sources. We cannot guarantee the validity of the information found here.</string>

</resources>
