<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.ustates.app.Help">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.ustates.app.Help">

            <TextView
                android:id="@+id/help_app_features"
                android:text="@string/help_app_features"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="@color/gloryred"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/help_feature1"
                android:text="@string/help_feature1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_app_features"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature2"
                android:text="@string/help_feature2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature3"
                android:text="@string/help_feature3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature4"
                android:text="@string/help_feature4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature3"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature5"
                android:text="@string/help_feature5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature4"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_home_page"
                android:text="@string/help_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature5"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="@color/gloryred"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/help_feature6"
                android:text="@string/help_feature6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_home_page"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature7"
                android:text="@string/help_feature7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature6"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature8"
                android:text="@string/help_feature8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature7"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature9"
                android:text="@string/help_feature9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature8"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature10"
                android:text="@string/help_feature10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature9"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_state_page"
                android:text="@string/help_state_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature10"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="@color/gloryred"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/help_feature11"
                android:text="@string/help_feature11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_state_page"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature12"
                android:text="@string/help_feature12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature11"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature13"
                android:text="@string/help_feature13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature12"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature14"
                android:text="@string/help_feature14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature13"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature15"
                android:text="@string/help_feature15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature14"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_misc"
                android:text="@string/help_misc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature15"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="@color/gloryred"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/help_feature16"
                android:text="@string/help_feature16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_misc"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature17"
                android:text="@string/help_feature17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature16"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature18"
                android:text="@string/help_feature18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature17"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_feature19"
                android:text="@string/help_feature19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature18"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/help_disclaimer"
                android:text="@string/help_disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_feature19"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/help_empty_space"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/help_disclaimer"/>

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/about_copyright"
        android:text="@string/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/gloryred"/>
</RelativeLayout>