<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ustates.app.About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.ustates.app.About">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/about_app_name_info"
                android:text="@string/about_app_name_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_icon"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/gloryred"/>

            <TextView
                android:id="@+id/about_version"
                android:text="@string/about_version"
                android:layout_width="190dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/about_app_name_info"
                android:textSize="22sp"
                android:textColor="@color/gloryred"/>

            <TextView
                android:id="@+id/about_version_info"
                android:text="@string/about_version_info"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/about_version"
                android:layout_below="@+id/about_app_name_info"
                android:textSize="22sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/about_size"
                android:text="@string/about_size"
                android:layout_width="190dp"
                android:layout_height="35dp"
                android:layout_below="@+id/about_version"
                android:textSize="22sp"
                android:textColor="@color/gloryred"/>

            <TextView
                android:id="@+id/about_size_info"
                android:text="@string/about_size_info"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/about_version_info"
                android:layout_toRightOf="@+id/about_size"
                android:textSize="22sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/about_support"
                android:text="@string/about_support"
                android:layout_width="190dp"
                android:layout_height="35dp"
                android:layout_below="@+id/about_size"
                android:textSize="22sp"
                android:textColor="@color/gloryred"/>

            <TextView
                android:id="@+id/about_support_info"
                android:text="@string/about_support_info"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_toRightOf="@+id/about_support"
                android:layout_below="@+id/about_size_info"
                android:textSize="22sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/about_develop"
                android:text="@string/about_develop"
                android:layout_width="190dp"
                android:layout_height="35dp"
                android:layout_below="@+id/about_support_info"
                android:textSize="22sp"
                android:textColor="@color/gloryred"/>

            <TextView
                android:id="@+id/about_develop_info"
                android:text="@string/about_develop_info"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/about_support_info"
                android:layout_toRightOf="@+id/about_develop"
                android:textSize="22sp"
                android:textColor="@color/gloryblue"/>

            <ImageView
                android:id="@+id/about_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/about_support_info"
                android:layout_toRightOf="@+id/about_develop_info"/>
    
            <TextView
                android:id="@+id/about_thanks"
                android:text="@string/about_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center_horizontal"
                android:layout_below="@+id/about_develop"
                android:textSize="22sp"
                android:textColor="@color/gloryblue"/>

            <TextView
                android:id="@+id/about_empty_space"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/about_thanks"/>

        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/about_copyright"
        android:text="@string/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/gloryred"/>
</RelativeLayout>



